Fix spacing around apparatus

--- a/static/base.css
+++ b/static/base.css
@@ -21,10 +21,6 @@
 .collapsible i:hover {
 	border-color: black;
 }
-.collapsible-content {
-	overflow: hidden;
-	transition: max-height 0.2s ease-out;
-}
 
 .data {
 	display: grid;
